# NervaAPI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.example.py  docker-compose.yml  factory.py  package-lock.json  package.json  pyproject.toml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
.github/workflows/: build.yml  frontend.yml  lint.yml  ruff.yml  typecheck.yml
assets/js/: main.js
blueprints/daemon/: routes.py
blueprints/market/: routes.py
docker/: nginx.conf
docker/hestia/: nerva_api.stpl  nerva_api.tpl
src/backend/: config.example.py  factory.py  launcher.py  utils.py
src/backend/blueprints/: __init__.py
src/backend/blueprints/analytics/: __init__.py  routes.py
src/backend/blueprints/daemon/: __init__.py  routes.py
src/backend/blueprints/index/: __init__.py  routes.py
src/backend/blueprints/market/: __init__.py  routes.py
src/frontend/: App.vue  index.html  main.ts  style.css  vite-env.d.ts
src/frontend/components/: AppSidebar.vue  CodeBlock.vue  ConventionsSection.vue  EndpointCard.vue  HeroSection.vue  RateLimitSection.vue  ReferenceSection.vue  StatusCodesSection.vue  SupportModal.vue  TheFooter.vue  TheTopbar.vue
src/frontend/components/ui/: BaseModal.vue  CopyField.vue  IconBtn.vue  SectionHead.vue
src/frontend/composables/: useCopy.ts  useScrollProgress.ts  useScrollSpy.ts  useTheme.ts
src/frontend/data/: api-spec.ts
src/frontend/directives/: reveal.ts
src/frontend/lib/: curl.ts  highlight.ts
templates/: index.html
