[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NervaAPI"
version = "1.0.0"
description = "NervaAPI is a REST API interface for the Nerva (XNV) blockchain."
license = "GPL-3.0"
authors = [
  { name="Sayan Bhattacharyya", email="sayan@sn1f3rt.dev" },
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp==3.10.10",
    "motor==3.6.0",
    "nerva-py==2.0.0",
    "quart-cors==0.8.0",
    "quart-rate-limiter==0.10.0",
    "quart==0.20.0",
    "schedule==1.2.2",
    "validators==0.34.0",
]

[project.optional-dependencies]
speed = [
    "uvloop==0.22.1",
]

[dependency-groups]
dev = [
    "mypy==2.1.0",
    "pre-commit==4.5.1",
    "ruff==0.14.14",
]

[tool.ruff]
line-length = 85
target-version = "py313"

[tool.ruff.lint]
select = ["I"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]
section-order = ["future", "typing", "standard-library", "third-party", "first-party", "local-folder"]
force-wrap-aliases = true
combine-as-imports = true
length-sort = true

[tool.ruff.lint.isort.sections]
"typing" = ["typing"]

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]

[tool.mypy]
files = ["src/backend"]
mypy_path = "src"
explicit_package_bases = true
strict = true

[[tool.mypy.overrides]]
module = [
    "nerva.*",
    "schedule.*",
    "validators.*",
    "quart_rate_limiter.*",
    "quart_cors.*",
    "motor.*",
]
ignore_missing_imports = true
